# transit-server

./: '  .gitignore  Cargo.toml  README.md  build.rs  rustc-ice-2025-05-27T09_09_35-60840.txt
proto/: db-transit.proto
src/: cacher.rs  client.rs  diff.rs  error.rs  lib.rs  log.rs  server.rs  shared.rs
src/diff/: core.rs  ir.rs  tests.rs
